# ngspice

./: .gitignore  ChangeLog  INSTALL  Makefile.am  README.org  README.shared-xspice  autogen.sh  configure.ac  rebase.sh
doc/: ngspice.texi
man/man1/: ngnutmeg.1  ngspice.1
src/: Makefile.am  main.c  sharedspice.c  tclspice.c  winmain.c  winmain.h
src/ciderlib/input/: dopset.c  matlset.c  meshset.c  modlset.c  outpset.c
src/ciderlib/oned/: oneadmit.c  onecond.c  onecont.c  onemesh.c  onepoiss.c  oneprint.c  oneproj.c  oneread.c  onesetup.c  onesolve.c
src/ciderlib/support/: integset.c  mobil.c  suprem.c
src/ciderlib/twod/: twoadmit.c  twocond.c  twocont.c  twomesh.c  twomobfn.c  twoncont.c  twopcont.c  twopoiss.c  twoprint.c  tworead.c  twosetup.c  twosolve.c
src/frontend/: Makefile.am  aspice.c  breakp.c  breakp2.c  breakp2.h  com_chdir.c  com_chdir.h  com_echo.c  com_echo.h  com_history.c  com_measure2.c  com_rehash.c  com_rehash.h  com_shell.c  com_shift.c  com_sysinfo.c  com_unset.c  com_unset.h  commands.c  control.h  cpitf.c  define.c  display.c  dotcards.c  hpgl.h  inp.c  inpcom.c  linear.c  measure.c  mw_coms.c  nutinp.c  options.c  outitf.c  parse-bison-y.h  parse-bison.c  parse-bison.h  parse-bison.y  parse.c  parse.h  postsc.c  (+15 more)
src/frontend/help/: x11disp.c
src/frontend/wdisp/: Makefile.am  windisp.c  windisp.h  winprint.h
src/include/: Makefile.am  cktdefs.h  dllitf.h  ftedbgra.h  ftedev.h  pzdefs.h  spmatrix.h
src/misc/: Makefile.am  alloc.c  dstring.c  getopt_long_bsd.c
xgraph/: Makefile.in  aclocal.m4  alloc.c  configure  xgraph.c
(+150 files in other folders)
