## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.5 2010/09/17 16:11:25 rlar Exp $

noinst_LTLIBRARIES = libwindisp.la

libwindisp_la_SOURCES = \
	windisp.c	\
	windisp.h	\
	winprint.c	\
	winprint.h	\
	ftegraf.h


AM_CPPFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/src/frontend/wdisp

MAINTAINERCLEANFILES = Makefile.in
